--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stealth Roguelike</title>
-  <link rel="stylesheet" href="style.css">
+  <meta http-equiv="refresh" content="0; url=/login" />
+  <title>Redirecting...</title>
 </head>
 <body>
-  <div id="game"></div>
-  <div id="log"></div>
-  <script src="client.js"></script>
+  <p>Redirecting to <a href="/login">login</a>...</p>
 </body>
 </html>
