--- a/src/public/notepad.html
+++ b/src/public/notepad.html
@@ -6,13 +6,14 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h2>Notepad</h2>
-  <form id="logoutForm" method="GET" action="/logout">
+  <form id="logoutForm" method="GET" action="/logout" style="margin-bottom:1rem;">
     <button type="submit">Logout</button>
   </form>
-  <textarea id="notes" rows="20" cols="60" placeholder="Write your notes here..."></textarea><br>
-  <button id="saveBtn">Save</button>
-  <div id="status"></div>
+  <div id="notepad-container">
+    <textarea id="notes" placeholder="Write your notes here..."></textarea>
+    <button id="saveBtn">Save</button>
+    <div id="status"></div>
+  </div>
   <script>
     fetch('/notepad/data').then(r=>r.json()).then(d=>{
       document.getElementById('notes').value = (d.notes||[]).join('\n');
